# dune-configurator-windows-bug

./: README.md  dune-project  test.opam
.github/workflows/: workflow.yml
src/: dune
src/configure/: configure.ml
